# stm32-gba-nds-cart-reader

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE.md  README.md  README.txt  STM32F103RCTx_BOOT.ld  STM32F103RCTx_FLASH.ld  makefile  startup_stm32f103xe.s  stm32-cartridge-reader.ioc
boot/: CMakeLists.txt  README.md
boot/inc/: flash.h  flash_config.h  usb.h
boot/src/: init.c  main.c  usb.c
cmake/: gcc-arm-none-eabi.cmake
cmake/add_unit_test/: add_unit_test.cmake  approval_test_settings.cpp
cmake/stm32cubemx/: CMakeLists.txt
doc/: 3dsreference.md  LICENCE.md  armcpureference.md  dsireference.md  gbareference.md  ndsreference.md  update_gbatek_docu.sh
doc/tmp/: 3dsarm11interrupts.md  3dsarm9interrupts.md  3dsarm9timers.md  3dscartridgeregisters.md  3dschipsetpinouts.md  3dscomponentlists.md  3dsconfigarm7registersgbandsdsimode.md  3dsconfigaxiregisters.md  3dsconfigconfig11registers.md  3dsconfigconfig9registers.md  3dsconfigregisters.md  3dsconnectorpinouts.md  3dsconsoleids.md  3dscryptoaeskeygenerator.md  3dscryptoaeskeyslots.md  3dscryptoaesregisters.md  3dscryptoprngandotpregisters.md  3dscryptoregisters.md  3dscryptorsaregisters.md  3dscryptorsasighax.md  3dscryptosharegisters.md  3dsdmacorelinkdmafixedconfigurationandidregisters.md  3dsdmacorelinkdmainternalstatestatusregisters.md  3dsdmacorelinkdmainterruptandfaultstatusregisters.md  3dsdmacorelinkdmaopcodesummary.md  3dsdmacorelinkdmaperipheralids.md  3dsdmacorelinkdmaregistersummary.md  3dsdmacorelinkdmatransferstartakadebugregisters.md  3dsdmandmaregisters.md  3dsdmaregisters.md  3dsemmcandmcuimages.md  3dsfilesarchivearcless.md  3dsfilesarchivedarc.md  3dsfilesarchivesarc.md  3dsfilesarchivezar.md  3dsfilesbase64encoding.md  3dsfilesccalformathardwarecalibrationhwcal.md  3dsfilesclientcertkeyclcerta.md  3dsfilesconfigsavegame.md  3dsfilescrr0andcro0files.md  (+678 more)
inc/: gba_cart.h  gpios.h  hw_config.h  nds_cart.h  print.h  usart.h  util.h
inc/usbd/: host_interface.h  usb_device.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
include/: util.h
lib/inc/: stm32f1xx_hal_pcd.h  usbd_cdc_if.h  usbd_def.h
lib/src/: stm32f1xx_hal_pcd.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
lib/stm32_lib/: CMakeLists.txt
lib/stm32_lib/inc/: stm32f103xe.h  stm32f1xx.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_pcd.h
lib/stm32_lib/src/: stm32f1xx_ll_usb.c  syscalls.c
lib/unit_tests_lib/approval/: ApprovalTests.hpp  ApprovalTests.v.10.13.0.hpp  approval_tests.cmake
lib/unit_tests_lib/catch2/: catch.cmake
lib/usbd_lib/: CMakeLists.txt
lib/usbd_lib/inc/: usbd_cdc.h  usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_ioreq.h
lib/usbd_lib/src/: usbd_cdc.c  usbd_core.c  usbd_ctlreq.c  usbd_ioreq.c
scripts/: checksum.py  dfu_app_flash.bat  flash_base_version.bat  gen_keys.py  gen_keys.sh  get_nds_file.bat  get_nds_file.py  read_header.bat  read_header.py  reboot_dfu_mode.bat  reboot_dfu_mode.py  serialtest.bat  serialtest.py
src/: gba_cart.c  gpios.c  main.c  nds_cart.c  print.c  stm32f1xx_it.c  usart.c  util.c
src/usbd/: host_interface.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
tests/: CMakeLists.txt  nintendo_cartridge_reader_tests.cpp  stm32_data_mock.cpp  stm32_data_mock.hpp
tests/approval_tests/: C__Workspace_nintendo-cartridge-reader_tests_nintendo_cartridge_reader_tests.key1_apply_keycode_approval_test.approved.txt  C__Workspace_nintendo-cartridge-reader_tests_nintendo_cartridge_reader_tests.key1_decrypt_cmd_approval_test.approved.txt  C__Workspace_nintendo-cartridge-reader_tests_nintendo_cartridge_reader_tests.key1_encrypt_cmd_approval_test.approved.txt  C__Workspace_nintendo-cartridge-reader_tests_nintendo_cartridge_reader_tests.key2_encrypt_cmd_approval_test.approved.txt  C__Workspace_nintendo-cartridge-reader_tests_nintendo_cartridge_reader_tests.key2_init_approval_test.approved.txt  C__Workspace_nintendo-cartridge-reader_tests_nintendo_cartridge_reader_tests.key2_xcrypt_approval_test.approved.txt  C__Workspace_nintendo-cartridge-reader_tests_nintendo_cartridge_reader_tests.nds_cart_exec_command_approval_test.approved.txt
